[fix*] fixed sidebar not collapsing bug

--- a/assets/css/feed.css
+++ b/assets/css/feed.css
@@ -429,6 +429,7 @@ input[type="checkbox"]:checked+label svg {
     height: 3rem;
     width: 3rem;
     border-radius: 50%;
+    cursor: pointer;
 }
 
 .card-favorites {
